TimeShiftingPresenter: Changed the way the values are converted to string, maybe this will fix the random crash with NumberFormatter? PlayerViewController (iOS): Added try/catch blocks when loading album art, trying to see what exactly makes the application crash randomly in this method.
Related to issue #405.

--- a/MPfm/MPfm.iOS/Info.plist
+++ b/MPfm/MPfm.iOS/Info.plist
@@ -63,5 +63,7 @@
 	<string>UIStatusBarStyleBlackOpaque</string>
 	<key>CFBundleDisplayName</key>
 	<string>Sessions</string>
+	<key>UIPrerenderedIcon</key>
+	<true/>
 </dict>
 </plist>
