Pitch Shifting: Business logic mostly done. Need to add pitch shifting methods to Player now. iOS: Updated Pitch Shifting view.
Related to issue #405 and issue #414.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -279,5 +279,6 @@
     <Compile Include="Views\ISyncView.cs" />
     <Compile Include="Presenters\Interfaces\ISyncPresenter.cs" />
     <Compile Include="Presenters\SyncPresenter.cs" />
+    <Compile Include="Models\PlayerPitchShiftingEntity.cs" />
   </ItemGroup>
 </Project>
