SyncListenerService: Now returning JSON and XML for API methods. Added authentication code with login page. Added JSON.NET library.
Related to issue #418.

--- a/MPfm/MPfm.Library/MPfm.Library.Android.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.Android.csproj
@@ -140,6 +140,7 @@
     <EmbeddedResource Include="WebApp\js\jquery-1.9.1.min.js" />
     <EmbeddedResource Include="WebApp\index.html" />
     <EmbeddedResource Include="WebApp\js\jquery.upload-1.0.2.min.js" />
+    <EmbeddedResource Include="WebApp\images\app_logo.png" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database\MonoSQLiteGateway.cs" />
