--- a/MPfm/MPfm.Library/MPfm.Library.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.csproj
@@ -81,9 +81,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="System.Reactive">
-      <HintPath>Lib\System.Reactive.dll</HintPath>
-    </Reference>
     <Reference Include="System.Data.SQLite">
       <HintPath>Lib\System.Data.SQLite.dll</HintPath>
     </Reference>
@@ -95,6 +92,9 @@
     </Reference>
     <Reference Include="Mono.Data.Sqlite" />
     <Reference Include="Mono.Posix" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>Lib\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
@@ -108,12 +108,13 @@
     <Content Include="Lib\SQLite.Interop.dll" />
     <Content Include="Lib\System.Data.SQLite.dll" />
     <Content Include="Lib\System.Data.SQLite.Linq.dll" />
-    <Content Include="Lib\System.Reactive.dll" />
     <EmbeddedResource Include="WebApp\css\app.css" />
     <EmbeddedResource Include="WebApp\js\app.js" />
     <EmbeddedResource Include="WebApp\js\jquery-1.9.1.min.js" />
     <EmbeddedResource Include="WebApp\index.html" />
     <EmbeddedResource Include="WebApp\js\jquery.upload-1.0.2.min.js" />
+    <EmbeddedResource Include="WebApp\images\app_logo.png" />
+    <EmbeddedResource Include="WebApp\login.html" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MPfm.Core\MPfm.Core.csproj">
@@ -183,5 +184,8 @@
     <Compile Include="Services\Events\ProcessEndedEventArgs.cs" />
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Lib\Newtonsoft.Json.dll" />
   </ItemGroup>
 </Project>
