--- a/MPfm/MPfm.MVP/MPfm.MVP.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.csproj
@@ -215,5 +215,6 @@
     <Compile Include="Views\ISyncView.cs" />
     <Compile Include="Presenters\Interfaces\ISyncPresenter.cs" />
     <Compile Include="Presenters\SyncPresenter.cs" />
+    <Compile Include="Models\PlayerPitchShiftingEntity.cs" />
   </ItemGroup>
 </Project>
