--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -56,8 +56,8 @@
     <MtouchI18n />
     <MtouchArch>ARMv7</MtouchArch>
     <MtouchExtraArgs>-v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
-    <CodesignProvision>5C51C790-BB21-4F44-BECA-051A853109C6</CodesignProvision>
     <CrashReportingApiKey />
+    <CodesignProvision>F798605A-7A30-495E-97CC-B4C089A6E19E</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -214,6 +214,26 @@
     <Compile Include="Classes\Controllers\SyncWebBrowserViewController.designer.cs">
       <DependentUpon>SyncWebBrowserViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Controllers\PreferencesViewController.cs" />
+    <Compile Include="Classes\Controllers\PreferencesViewController.designer.cs">
+      <DependentUpon>PreferencesViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Controllers\AudioPreferencesViewController.cs" />
+    <Compile Include="Classes\Controllers\AudioPreferencesViewController.designer.cs">
+      <DependentUpon>AudioPreferencesViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Controllers\GeneralPreferencesViewController.cs" />
+    <Compile Include="Classes\Controllers\GeneralPreferencesViewController.designer.cs">
+      <DependentUpon>GeneralPreferencesViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Controllers\LibraryPreferencesViewController.cs" />
+    <Compile Include="Classes\Controllers\LibraryPreferencesViewController.designer.cs">
+      <DependentUpon>LibraryPreferencesViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Classes\Controllers\AboutViewController.cs" />
+    <Compile Include="Classes\Controllers\AboutViewController.designer.cs">
+      <DependentUpon>AboutViewController.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="XIB\iPhone\SplashViewController_iPhone.xib" />
@@ -248,6 +268,16 @@
     <InterfaceDefinition Include="XIB\iPhone\SyncViewController_iPhone.xib" />
     <InterfaceDefinition Include="XIB\iPad\SyncWebBrowserViewController_iPad.xib" />
     <InterfaceDefinition Include="XIB\iPhone\SyncWebBrowserViewController_iPhone.xib" />
+    <InterfaceDefinition Include="XIB\iPad\PreferencesViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\PreferencesViewController_iPhone.xib" />
+    <InterfaceDefinition Include="XIB\iPad\AudioPreferencesViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\AudioPreferencesViewController_iPhone.xib" />
+    <InterfaceDefinition Include="XIB\iPad\GeneralPreferencesViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\GeneralPreferencesViewController_iPhone.xib" />
+    <InterfaceDefinition Include="XIB\iPad\LibraryPreferencesViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\LibraryPreferencesViewController_iPhone.xib" />
+    <InterfaceDefinition Include="XIB\iPad\AboutViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\AboutViewController_iPhone.xib" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
