Sync: Added SyncMenuView. iOS: Fixed release build.
Related to issue #405 and issue #418.

--- a/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.Android.csproj
@@ -235,5 +235,8 @@
     <Compile Include="Views\ISyncWebBrowserView.cs" />
     <Compile Include="Presenters\Interfaces\ISyncWebBrowserPresenter.cs" />
     <Compile Include="Presenters\SyncWebBrowserPresenter.cs" />
+    <Compile Include="Presenters\SyncMenuPresenter.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncMenuPresenter.cs" />
+    <Compile Include="Views\ISyncMenuView.cs" />
   </ItemGroup>
 </Project>
