--- a/MPfm/MPfm.iOS/MPfm.iOS.csproj
+++ b/MPfm/MPfm.iOS/MPfm.iOS.csproj
@@ -57,7 +57,7 @@
     <MtouchArch>ARMv7</MtouchArch>
     <MtouchExtraArgs>-v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
     <CrashReportingApiKey />
-    <CodesignProvision>F798605A-7A30-495E-97CC-B4C089A6E19E</CodesignProvision>
+    <CodesignProvision>5C51C790-BB21-4F44-BECA-051A853109C6</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>none</DebugType>
@@ -67,7 +67,7 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
     <CodesignKey>iPhone Developer</CodesignKey>
-    <MtouchExtraArgs>-v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
+    <MtouchExtraArgs>-nosymbolstrip -v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
     <MtouchI18n />
     <MtouchArch>ARMv7</MtouchArch>
     <IpaPackageName />
@@ -80,12 +80,12 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
     <BuildIpa>True</BuildIpa>
-    <CodesignKey>iPhone Distribution</CodesignKey>
-    <MtouchExtraArgs>-v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
+    <CodesignKey>iPhone Distribution: Société Radio-Canada</CodesignKey>
+    <MtouchExtraArgs>-nosymbolstrip -v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
     <MtouchI18n />
     <MtouchArch>ARMv7</MtouchArch>
-    <MtouchSdkVersion>6.0</MtouchSdkVersion>
     <IpaPackageName />
+    <CodesignProvision>99ED25A5-B59B-425E-9E09-73A132DB98B4</CodesignProvision>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'AppStore|iPhone' ">
     <DebugType>none</DebugType>
@@ -95,10 +95,10 @@
     <WarningLevel>4</WarningLevel>
     <ConsolePause>False</ConsolePause>
     <CodesignKey>iPhone Distribution</CodesignKey>
-    <MtouchExtraArgs>-v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
+    <MtouchExtraArgs>-nosymbolstrip -v -v -v -gcc_flags "-L${ProjectDir}/Lib/ -framework Accelerate -ObjC -lstdc++ -lbass -lbassmix -lbass_fx -lbass_ape -lbass_mpc -lbassflac -lbasswv -all_load"</MtouchExtraArgs>
     <MtouchI18n />
     <MtouchArch>ARMv7</MtouchArch>
-    <MtouchSdkVersion>6.0</MtouchSdkVersion>
+    <IpaPackageName />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -214,6 +214,10 @@
     <Compile Include="Classes\Controllers\SyncWebBrowserViewController.designer.cs">
       <DependentUpon>SyncWebBrowserViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Classes\Controllers\SyncMenuViewController.cs" />
+    <Compile Include="Classes\Controllers\SyncMenuViewController.designer.cs">
+      <DependentUpon>SyncMenuViewController.cs</DependentUpon>
+    </Compile>
     <Compile Include="Classes\Controllers\PreferencesViewController.cs" />
     <Compile Include="Classes\Controllers\PreferencesViewController.designer.cs">
       <DependentUpon>PreferencesViewController.cs</DependentUpon>
@@ -268,6 +272,8 @@
     <InterfaceDefinition Include="XIB\iPhone\SyncViewController_iPhone.xib" />
     <InterfaceDefinition Include="XIB\iPad\SyncWebBrowserViewController_iPad.xib" />
     <InterfaceDefinition Include="XIB\iPhone\SyncWebBrowserViewController_iPhone.xib" />
+    <InterfaceDefinition Include="XIB\iPad\SyncMenuViewController_iPad.xib" />
+    <InterfaceDefinition Include="XIB\iPhone\SyncMenuViewController_iPhone.xib" />
     <InterfaceDefinition Include="XIB\iPad\PreferencesViewController_iPad.xib" />
     <InterfaceDefinition Include="XIB\iPhone\PreferencesViewController_iPhone.xib" />
     <InterfaceDefinition Include="XIB\iPad\AudioPreferencesViewController_iPad.xib" />
