Sync: Added ISyncDownloadView for reporting download progress.
Related to issue #405 and issue #418.

--- a/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
+++ b/MPfm/MPfm.MVP/MPfm.MVP.iOS.csproj
@@ -293,5 +293,8 @@
     <Compile Include="Presenters\AboutPresenter.cs" />
     <Compile Include="Presenters\Interfaces\IAboutPresenter.cs" />
     <Compile Include="Views\IAboutView.cs" />
+    <Compile Include="Views\ISyncDownloadView.cs" />
+    <Compile Include="Presenters\Interfaces\ISyncDownloadPresenter.cs" />
+    <Compile Include="Presenters\SyncDownloadPresenter.cs" />
   </ItemGroup>
 </Project>
