Sync: Downloaded files are now added to the library! iOS: Updated Sync download screens with a new look (iPhone/iPad) with progress update. iOS: A lot of visual bug fixes for iPad.
Related to issue #405 and issue #418.

--- a/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
+++ b/MPfm/MPfm.Library/MPfm.Library.iOS.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Services\Events\ProcessEndedEventArgs.cs" />
     <Compile Include="Services\Events\RefreshStatusEventArgs.cs" />
     <Compile Include="Objects\UpdateLibraryEntity.cs" />
+    <Compile Include="Objects\SyncClientDownloadAudioFileProgressEntity.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Lib\iOS\Newtonsoft.Json.dll" />
